# fcitx5-htg

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  htg-addon.conf.in  htg.conf  htg.cpp  htg.h
